# git_mobile_public

./: .gitignore  Cargo.toml  README.md  analysis_options.yaml  build_android.sh  build_ios.sh  justfile  libcrypto.1.1.dylib  libssl.1.1.dylib  pubspec.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: publish.yaml
android/app/: build.gradle
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  bridge_generated.dart  ffi.dart  main.dart
lib/bridge_generated/: api.dart  git.dart  ssh.dart
lib/l10n/: app_ja.arb
lib/model/enums/: error.dart
lib/model/repo/: repo.dart  repo.freezed.dart
lib/model/types/: fp_alias.dart
lib/repository/file/: file_repository.dart  file_repository_impl.dart
lib/repository/home/: home_repository.dart  home_repository_impl.dart
lib/repository/repo/: repo_repository.dart  repo_repository_impl.dart
lib/screen/: home_page.dart
lib/screen/home/: home_page.dart  home_screen.dart  home_state.dart  home_state.freezed.dart  home_view_model.dart
lib/state/: dir_controller.dart
libgit2-bindings/: Cargo.toml
libgit2-bindings/libgit2-bindings.xcodeproj/: project.pbxproj
libgit2-bindings/libgit2-bindings.xcodeproj/xcuserdata/kosuke.xcuserdatad/xcschemes/: xcschememanagement.plist
libgit2-bindings/src/: api.rs  bridge_generated.rs  error.rs  git.rs  lib.rs  ssh.rs
libgit2-bindings/src/bridge_generated/: api.rs  git.rs  mod.rs  ssh.rs
test/: widget_test.dart
xtask/: Cargo.toml
xtask/src/: main.rs
(+18 files in other folders)
