[package]
name = "libgit2-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
git2 = "0.14.4"
flutter_rust_bridge = "1"
thiserror = "1.0"
ssh-key = { version = "0.4.3", features = ["getrandom", "encryption", "ed25519", "std"] }
getrandom = "0.2"
# ssh2 = "0.9.3"
